# binary-statistics

./: .gitignore  Makefile  README.md  binaries_distributions.cpp  distributions.cpp  plot.cpp  plot.h  pyproject.toml
binaryStatistics/: __init__.py  base_distribution.py  constants.py  distributions.py  schemas.py
binaryStatistics/chae_velocity_deconstruction/: chae_velocity_reconstruction.py  utils.py
binaryStatistics/hidden_tertiaries/: hidden_tertiaries.py  utils.py
binaryStatistics/orbital_distributions/: distributions.py  hernandez_orbital_distributions.py  utils.py
c++/: Makefile  binaries.cpp  distributions.cpp  distributions.h  matplotlibcpp.h  vtilde.cpp
data/: 667Bp_0.8.csv
notebooks/: HiddenTertiaries.ipynb  Untitled.ipynb  Untitled1.ipynb  hidden_tertiaries.ipynb  new_hidden.ipynb  test.ipynb
notebooks/.ipynb_checkpoints/: hidden_tertiaries-checkpoint.ipynb  new_hidden-checkpoint.ipynb  test-checkpoint.ipynb
python/: .gitignore  .pre-commit-config.yaml  pyproject.toml
python/binaryStatistics/: base_distribution.py  distributions.py  plot_utils.py
python/binaryStatistics/.ipynb_checkpoints/: distributions-checkpoint.py
python/data/: WB450.csv
python/notebooks/: Untitled.ipynb  binary_data.ipynb  distributions.ipynb  hidden_tertiaries.ipynb  v_tilde.ipynb
python/notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  binary_data-checkpoint.ipynb  distributions-checkpoint.ipynb  v_tilde-checkpoint.ipynb
python/notes/: notes-04-08-23  notes-09-08-23
