[tool.poetry]
name = "binaries-statistics"
version = "0.1.0"
description = "Módulo para el análisis estadístico de estrellas binarias."
authors = ["Alejandro Aguayo-Ortiz <aaguayoo92@gmail.com>"]
packages = [{include="binaryStatistics"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pydantic = "1.8.2"
scipy = "1.8.1"
sympy = "^1.12"
numpy = "^1.21.2"
ipython = "^8.14.0"
nbconvert = "^7.7.4"
pandas = "^2.1.0"

[tool.poetry.group.dev.dependencies]
black = "22.1.0"
click = "8.0.2"
coverage = "5.3"
flake8 = "3.8.4"
flake8-isort = "4.0.0"
flake8-docstrings = "1.5.0"
isort = "5.8.0"
ipykernel = "6.6.0"
ipympl = "0.8.2"
ipywidgets = "7.6.5"
Jinja2 = "3.0.3"
jovian = "0.2.41"
jupyterlab = "3.6.5"
jupyterlab-snippets = "0.4.1"
matplotlib = "3.5.0"
memory-profiler = "0.58.0"
mike = "1.1.2"
mkdocs = "1.2.3"
mkdocs-material = "7.3.6"
mkdocstrings = "0.19"
mkdocstrings-python = "0.7.1"
moviepy = "1.0.3"
mypy = "0.910"
plotly = "5.6.0"
pre-commit = "2.9.2"
psutil = "5.8.0"
pyinstrument = "3.3.0"
pytest = "7.1.1"
pytest-cov = "2.10.1"
pytest-watch = "4.2.0"
streamlit = "^1.25.0"

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
default_section = "THIRDPARTY"
known_third_party = []
known_first_party = ["binaryStatistics"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
